# openhitls_agent

./: .env.example  .gitignore  README.md  pyproject.toml
backend/: openwebui_pipeline.py  server.py
bak/: a.txt
scripts/: build_index.sh  models_download.py  repo_clone.sh
src/agent/: graph.py  graph_chat.py  schema.py  state.py
src/agent/coding/: graph.py  nodes.py  prompts.py  test.py  tools.py
src/agent/coding/utils/: utils.py
src/agent/planning/: graph.py  prompts.py  tools.py
src/agent/planning/RAG/: embbeding.py  retrieval.py
src/agent/planning/RAG/doc/deepwiki/: GBT 17964-2021.md  openHiTLS.md
src/agent/planning/knowledge_graph/: build.py  db.py  model.py  query.py
src/agent/router/: graph.py  tools.py
src/configs/: __init__.py
src/dependency_graph/: batch_build_graph.py
src/plugins/location_tools/interpreter/: interpreter.py
src/plugins/location_tools/repo_ops/: repo_ops.py  setup_repo.py
src/plugins/location_tools/retriever/: bm25_retriever.py  fuzzy_retriever.py
src/plugins/location_tools/utils/: result_format.py  util.py
src/repo_index/: build_bm25_index.py  file_context.py  workspace.py
src/repo_index/codeblocks/: __init__.py
src/repo_index/codeblocks/parser/: java.py
src/repo_index/index/: __init__.py  code_index.py  epic_split.py
